# my-api-server

./: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt  test_main.http
.claude/: settings.local.json
app/: __init__.py  config.py  db.py  main.py
app/api/: __init__.py
app/api/routes/: models.py  sites.py
app/models/: model.py  response.py
app/prompts/: system_prompt.txt
app/services/: chat.py
etc/: config.yaml
hack/: start.sh
migrations/: 001_models.sql
