[project]
name = "my-api-server"
version = "0.1.0"
description = "MyAPI Python backend (FastAPI). Model management and chat proxy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.2",
    "sqlalchemy>=2.0.46",
    "pymysql>=1.1.2",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
